[gd_scene load_steps=16 format=3 uid="uid://dh7hsqplxtm8a"]

[ext_resource type="Script" path="res://Scenes/UI/End.gd" id="1_ousq2"]
[ext_resource type="Texture2D" uid="uid://dsskfhkg8fdjt" path="res://art/scenes/sewers/sewer_tilemap.png" id="2_x55en"]
[ext_resource type="FontFile" uid="uid://delfxij7j3oq" path="res://art/UI/retro-blocky.otf" id="3_alhrj"]
[ext_resource type="Texture2D" uid="uid://bkuvteqbt1smj" path="res://art/Buttons/menu_up.png" id="4_hs6hv"]
[ext_resource type="Texture2D" uid="uid://bo0o6nre4gify" path="res://art/Buttons/menu_down.png" id="5_qyg6c"]
[ext_resource type="PackedScene" uid="uid://cae36c1vj7r74" path="res://Scenes/Entities/Interactables/torch.tscn" id="6_qyt58"]
[ext_resource type="PackedScene" uid="uid://bpsdqiyn4djn5" path="res://Scenes/Entities/NPCs/Monster_Stone/monster_stone.tscn" id="7_5wkq5"]
[ext_resource type="PackedScene" uid="uid://bnxbj0xdq1al8" path="res://Scenes/Entities/Interactables/saw.tscn" id="8_xu513"]
[ext_resource type="PackedScene" uid="uid://bhnpndq103000" path="res://Scenes/Entities/Player/player.tscn" id="9_5ei06"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jd5yb"]
texture = ExtResource("2_x55en")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jadlw"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_jd5yb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3fff3"]
texture = ExtResource("4_hs6hv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ndhsg"]
texture = ExtResource("4_hs6hv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5piq1"]
texture = ExtResource("5_qyg6c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p03fd"]

[node name="End" type="Node2D"]
script = ExtResource("1_ousq2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jadlw")
format = 2
layer_0/tile_data = PackedInt32Array(524288, 65536, 1, 524289, 65536, 1, 524290, 65536, 1, 524291, 65536, 1, 524292, 65536, 1, 524293, 65536, 1, 524294, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 524297, 65536, 1, 524298, 65536, 1, 524299, 65536, 1, 524300, 65536, 1, 524301, 65536, 1, 524302, 65536, 1, 524303, 65536, 1, 0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 1, 65536, 1, 2, 65536, 1, 3, 65536, 1, 4, 65536, 1, 5, 65536, 1, 6, 65536, 1, 7, 65536, 1, 8, 65536, 1, 9, 65536, 1, 10, 65536, 1, 11, 65536, 1, 12, 65536, 1, 13, 65536, 1, 14, 65536, 1, 15, 65536, 1, 65551, 65536, 1, 131087, 65536, 1, 196623, 65536, 1, 262159, 65536, 1, 327695, 65536, 1, 393231, 65536, 1, 458767, 65536, 1, 65537, 131072, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 0, 0, 458753, 65536, 0, 65538, 0, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 131072, 0, 327682, 65536, 0, 393218, 0, 0, 458754, 0, 0, 65539, 131072, 0, 131075, 65536, 0, 196611, 0, 0, 262147, 131072, 0, 327683, 65536, 0, 393219, 131072, 0, 458755, 131072, 0, 65540, 131072, 0, 131076, 131072, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 131072, 0, 393220, 131072, 0, 458756, 131072, 0, 65541, 65536, 0, 131077, 131072, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 65536, 0, 458757, 0, 0, 65542, 131072, 0, 131078, 0, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 131072, 0, 393222, 0, 0, 458758, 131072, 0, 65543, 0, 0, 131079, 131072, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 131072, 0, 458759, 0, 0, 65544, 131072, 0, 131080, 0, 0, 196616, 131072, 0, 262152, 65536, 0, 327688, 65536, 0, 393224, 131072, 0, 458760, 131072, 0, 65545, 65536, 0, 131081, 131072, 0, 196617, 131072, 0, 262153, 131072, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 65536, 0, 65546, 65536, 0, 131082, 131072, 0, 196618, 131072, 0, 262154, 0, 0, 327690, 131072, 0, 393226, 0, 0, 458762, 0, 0, 65547, 131072, 0, 131083, 131072, 0, 196619, 65536, 0, 262155, 0, 0, 327691, 0, 0, 393227, 65536, 0, 458763, 131072, 0, 65548, 65536, 0, 131084, 0, 0, 196620, 131072, 0, 262156, 131072, 0, 327692, 131072, 0, 393228, 131072, 0, 458764, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 131072, 0, 262157, 65536, 0, 327693, 0, 0, 393229, 131072, 0, 458765, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 131072, 0, 393230, 131072, 0, 458766, 65536, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = 85.0
offset_top = 24.0
offset_right = 159.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("3_alhrj")
theme_override_font_sizes/font_size = 15
text = "Score: "

[node name="ScoreNum" type="Label" parent="Control/Score"]
layout_mode = 0
offset_left = 77.0
offset_right = 151.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_alhrj")
theme_override_font_sizes/font_size = 15
text = "1
"

[node name="Deaths" type="Label" parent="Control"]
layout_mode = 0
offset_left = 85.0
offset_top = 54.0
offset_right = 171.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("3_alhrj")
theme_override_font_sizes/font_size = 15
text = "Deaths: "

[node name="DeathNum" type="Label" parent="Control/Deaths"]
layout_mode = 0
offset_left = 88.0
offset_right = 162.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_alhrj")
theme_override_font_sizes/font_size = 15
text = "1"

[node name="menubutton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 113.0
offset_top = 92.0
offset_right = 145.0
offset_bottom = 108.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3fff3")
theme_override_styles/hover = SubResource("StyleBoxTexture_ndhsg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5piq1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p03fd")

[node name="Torch" parent="." instance=ExtResource("6_qyt58")]
position = Vector2(24, 120)
is_lit = true

[node name="Torch2" parent="." instance=ExtResource("6_qyt58")]
position = Vector2(232, 120)
is_lit = true

[node name="monster_stone" parent="." instance=ExtResource("7_5wkq5")]
position = Vector2(49, 120)

[node name="monster_stone2" parent="." instance=ExtResource("7_5wkq5")]
position = Vector2(49, 107)

[node name="monster_stone3" parent="." instance=ExtResource("7_5wkq5")]
position = Vector2(216, 120)

[node name="saw" parent="." instance=ExtResource("8_xu513")]
position = Vector2(72, 120)

[node name="saw2" parent="." instance=ExtResource("8_xu513")]
position = Vector2(200, 120)

[node name="Player" parent="." instance=ExtResource("9_5ei06")]
position = Vector2(169, 121)

[connection signal="button_up" from="Control/menubutton" to="." method="_on_menubutton_button_up"]
